--- a/index1.html
+++ b/index1.html
@@ -2,12 +2,30 @@
 <html>
 
 <head>
-    <title>Jupiter</title>
+    <title>first HTML attempt</title>
     <base href="https://www.example.com">
     <link rel="stylesheet" href="styles.css">
     <meta charset="UTF-8">
     <style>
         /* CSS styles here */
+        /*changing background body*/
+        h1{
+            background-color:#D2B48C;
+        }
+        .headers{
+            font-size: 14px ;
+        }
+
+        .colors{
+            background-color:#d28ca6;
+
+        }
+
+        #title{
+            background-color:#8c92d2;
+        }
+
+
     </style>
     <script>
         // JavaScript code here
@@ -15,9 +33,9 @@
     <noscript>Please enable JavaScript to view this site.</noscript>
 </head>
 
-<body bgcolor="#D2B48C">
+<body>
     <header>
-        <h1>First HTML attempt</h1>
+        <h1 id="title">Jupiter</h1>
         <nav>
             <ul>
                 <li><a href="#section1">Introduction</a></li>
@@ -30,7 +48,7 @@
     <main>
         <article>
             <section id="section1">
-                <h2>Introduction</h2>
+                <h2 class="headers">Introduction</h2>
                 <p>
                     Jupiter is the fifth planet from the Sun and the largest in the Solar System. It is a gas giant with a mass more than two and a half times that of all the other planets in the Solar System combined, and slightly less than one one-thousandth the mass of the Sun.
                 </p>
@@ -38,7 +56,7 @@
             </section>
 
             <section id="section2">
-                <h2>About Jupiter</h2>
+                <h2 class="headers colors">About Jupiter</h2>
                 <p>
                     <h3>Namesake</h3>
                     <p>Jupiter, being the biggest planet, gets its name from the god of the sky and thunder, and king of the gods in ancient Roman religion and mythology,Jupiter.</p>
@@ -91,7 +109,7 @@
             <li>Venus</li>
             <li>Earth</li>
             <li>Mars</li>
-            <li><strong>Jupiter</strong></li>
+            <li ><strong>Jupiter</strong></li>
             <li>Saturn</li>
             <li>Uranus</li>
             <li>Neptune</li>
